# scorematchingad

./: .Rbuildignore  .gitattributes  .gitignore  1. functions.R  3. h_calculations.R  6. model4.R  7. model7.R  CRAN-SUBMISSION  DESCRIPTION  LICENSE  NAMESPACE  NEWS.md  README.md  cleanup  configure  configure.ac  configure.win  configure_trash  cout2Rcout.sh  cran-comments.md  installedpackages.csv  microbiome_data.xlsx  readme.txt  sm_possphere.cpp
.github/workflows/: R-CMD-check.yaml
R/: 1. functions.R  2. figure_1_and_2.R  5. model1.R  ADFun.R  ADFunClass.R  ADFun_builders.R  ADFun_interface.R  ADFun_print.R  Bingham.R  FB.R  RcppExports.R  Rcpp_ADFun.R  Rcpp_ADFun_print.R  Rivest.R  Score1.R  Score1SE.R  Score1_dir.R  Score2.R  Score2SE.R  Score2_dir.R  Score_beta.R  Stiefel_utils.R  W11.R  W12.R  W22.R  Windham.R  WindhamRobust.R  Windham_assess_estimator.R  Windham_raw.R  Windham_weights.R  approxcentre_simplex.R  buildsmdtape.R  buildsmotape.R  cppad_closed.R  cppad_evalmany.R  cppad_search.R  cppad_search_SE.R  cppadest.R  cppadtape.R  custom_uld.R  (+98 more)
data/: microbiome.rda  microdata.rda
data-raw/: S1_Table.xlsx
inst/: REFERENCES.bib  demo_custom_uld.cpp  inlinedirichtape.cpp
inst/cppad/: readme.md
inst/include/: CppAD_LICENSE  scorematchingad.h  scorematchingad_forward.h  tapellcpp.cpp  tapellcpp.h
man/: ADFun.Rd  Bingham.Rd  FB.Rd  Rcpp_ADFun-class.Rd  Rcpp_ADFun-methods.Rd  Rcpp_ADFun.Rd  Stiefel_embedding.Rd  Windham.Rd  Windham_populationinverse.Rd  Windham_weights.Rd  avgrange.Rd  buildsmdtape.Rd  buildsmotape.Rd  commutation_mat.Rd  cppad_closed.Rd  cppad_search.Rd  customll.Rd  default_Rcgmin.Rd  dppi.Rd  evalll.Rd  evaltape.Rd  evaltape_internal.Rd  fixdynamic.Rd  fixindependent.Rd  keeprange.Rd  manifoldtransform.Rd  microbiome.Rd  microdata.Rd  moretapebuilders.Rd  pForward0.Rd  pHessian.Rd  pJacobian.Rd  pParameter.Rd  pTapeGradOffset.Rd  pTapeHessian.Rd  pTapeJacobian.Rd  pTaylorApprox.Rd  ppi.Rd  ppi_cW.Rd  ppi_egmodel.Rd  (+50 more)
other/: expose_ADFund.R  search_for_correct_acut.R  speedcomparison.R  toAstar_attempts.R
othersource/: 4. modelA.R  8. real_data_analysis.R
src/: ADFun.cpp  ADFun_d_Module.cpp  ADFun_module.cpp  ADFun_module.h  Makevars  Makevars.win  RcppExports.cpp  abort_recording.cpp  approx.cpp  approx.h  approxwrap.h  avgrange.cpp  avgrange.h  cdabyppi_types.h  cppad_interface.cpp  cppad_interface.h  cppad_interface.hpp  error_handler.cpp  exposemanifold.cpp  exposemanifold.h  exposetransform.cpp  exposetransform.h  fixdynamic.cpp  fixdynamic.h  fixindependent.cpp  fixindependent.h  keeprange.cpp  keeprange.h  pADFun.cpp  pADFun_retape.cpp  pADFun_retape.h  placeholder.cpp  printgraph.cpp  scm.cpp  scm.hpp  scm_interface.cpp  scm_interface.hpp  scm_simplex.cpp  scorecompdir_types.h  scorematchingad_types.h  (+17 more)
src/CppAD/: CMakeLists.txt
src/likelihoods/: Bingham.hpp  ppi.hpp  vMF.hpp
src/manifoldtransforms/: bdryweights.hpp  transform_clr.hpp
src/mycpp/: FB.hpp  PrintFor.cpp  Rivest.hpp  approx.cpp  approx.hpp  dirichlet.cpp  dirichlet_simplex.cpp  hfuns.cpp  likelihoods.hpp  main.cpp  scm.cpp  (+26 more)
tests/: externtest.R  prepinteractivetesting.R  test.sh  testthat.R
vignettes/: Effect of AL on Marginal Distributions.Rmd  cppad.Rmd  example_models.Rmd  ppi_ternary_plots.Rmd  score_matching_intro.Rmd  tryingminimisers.R  vMF_robust_relativeefficienty.Rmd
(+189 files in other folders)
